--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
                 <button class="join-button">Join</button>
             </div>
             <img src="resources/Group 70.png" alt="" width="320px" height="465px">
-        </div>
+        </div> 
+    </section>
+    <section class="invitation">
+        <p class="invitation-details">
+            <span style="color: #f00;"> Place:</span>New Class Hotel. <br>
+            <span style="color: #f00;"> Date:</span>31 December Night 2023. <br>
+            <span style="color: #f00;"> Time:</span>Evening 7.30pm to 12.30am. <br>
+            <button class="join-button">Join Now</button>
+        </p>
         
     </section>
 
